# computer_graphics

./: LICENSE  README.md  notes.md
building_using_cmake/: CMakeLists.txt
building_using_cmake/include/glad/: glad.h
building_using_cmake/src/: glad.c
graphics_programming_build_setup/: CMakeLists.txt
learnopengl/notes/1.getting_started/: notes.md
learnopengl/src/1.getting_started/1.1.hello_window/: test.cpp
learnopengl/vscode/: main  main.cpp
modern_opengl_with_cpp/: CMakeLists.txt  learning_topics.md  notes.md
modern_opengl_with_cpp/include/: constants.h  window.h
modern_opengl_with_cpp/notes/section_2/: notes.md
modern_opengl_with_cpp/src/: window.cc
modern_opengl_with_cpp/src/section_1/: main.cc
modern_opengl_with_cpp/src/section_5/: main.cpp
modern_opengl_with_cpp/workspace/section_1/: main.cc
